--- a/modules/ROOT/partials/bo-cardlib.adoc
+++ b/modules/ROOT/partials/bo-cardlib.adoc
@@ -1,3 +1,3 @@
-*** xref:BackOffice-CardLib:BackOffice_NS.adoc[]
-**** xref:BackOffice-CardLib:CardLib_NS.adoc[]
-***** xref:BackOffice-CardLib:CardDefs/CardDefs_NS.adoc[]
+**** xref:BackOffice-CardLib:BackOffice_NS.adoc[]
+***** xref:BackOffice-CardLib:CardLib_NS.adoc[]
+****** xref:BackOffice-CardLib:CardDefs/CardDefs_NS.adoc[]
