--- a/modules/ROOT/partials/bo-om-services-categories.adoc
+++ b/modules/ROOT/partials/bo-om-services-categories.adoc
@@ -1,5 +1,5 @@
-****** xref:BackOffice-ObjectModel-Services-ICategoriesService:ICalendarService_IN.adoc[]
-****** xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService_IN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.AddCategory_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.FindCategoryByName_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.PasteCategory_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-ICategoriesService:ICalendarService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService_IN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.AddCategory_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.FindCategoryByName_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-ICategoriesService:ICategoriesService.PasteCategory_MT.adoc[]
