--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -1,33 +1,33 @@
-***** xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[]
-****** xref:BackOffice-ObjectModel-Services-Entities:Entities/Entities_NS.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ActiveDirectory_NS.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ADSync/ADSync_NS.adoc[]
-********* xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ADSync/IADSynchronizationSettings_IN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/KindSetting_NS.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CardFieldSetting_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/DocumentSetting_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskGroupSetting_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/ChildTaskKindType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CompletionParameterDemand_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CompletionParameterDisplayType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/DocumentLoadSource_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/ExtensionSettingType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskAutoCompletionType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskDependingCompletionType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskRoutingType_EN.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskSetting_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/BaseCardSignatureVerification_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PerformerSearchWordsManager_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/StartBusinessProcessErrorInfo_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskCopyResultsOptions_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskStopExecutionInfo_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/ILongProcessManager_IN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/BusinessProcessErrorType_EN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/DocumentPropertyDirection_EN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/GridViewFieldCollectionType_EN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PerformerType_EN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskTreeNodeType_EN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/CheckSignatureResult_CL.adoc[]
-******** xref:BackOffice-ObjectModel-Services-Entities:Entities/CheckSignatureResult_CT.adoc[]
+****** xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/Entities_NS.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ActiveDirectory_NS.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ADSync/ADSync_NS.adoc[]
+********** xref:BackOffice-ObjectModel-Services-Entities:Entities/ActiveDirectory/ADSync/IADSynchronizationSettings_IN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/KindSetting_NS.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CardFieldSetting_CL.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/DocumentSetting_CL.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskGroupSetting_CL.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/ChildTaskKindType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CompletionParameterDemand_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CompletionParameterDisplayType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/DocumentLoadSource_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/ExtensionSettingType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskAutoCompletionType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskDependingCompletionType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskRoutingType_EN.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/TaskSetting_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/BaseCardSignatureVerification_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CL.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PerformerSearchWordsManager_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/StartBusinessProcessErrorInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskCopyResultsOptions_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskStopExecutionInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/ILongProcessManager_IN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/BusinessProcessErrorType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/DocumentPropertyDirection_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/GridViewFieldCollectionType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PerformerType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskTreeNodeType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/CheckSignatureResult_CL.adoc[]
+********* xref:BackOffice-ObjectModel-Services-Entities:Entities/CheckSignatureResult_CT.adoc[]
