--- a/modules/ROOT/partials/bo-om-signature.adoc
+++ b/modules/ROOT/partials/bo-om-signature.adoc
@@ -1,4 +1,4 @@
-***** xref:BackOffice-ObjectModel-Signature:ScriptingScript_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Signature:SignatureLabel_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Signature:SignatureList_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Signature:SignatureType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Signature:ScriptingScript_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Signature:SignatureLabel_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Signature:SignatureList_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Signature:SignatureType_EN.adoc[]
