--- a/modules/ROOT/partials/cards.adoc
+++ b/modules/ROOT/partials/cards.adoc
@@ -1,31 +1,31 @@
-** xref:cards:general-information.adoc[]
-** xref:cards:connect-to-dv-server.adoc[]
-** xref:cards:init-object-context.adoc[]
-** xref:cards:work-cards.adoc[]
-*** xref:cards:get-card.adoc[]
-*** xref:cards:get-section.adoc[]
-*** xref:cards:edit-card.adoc[]
-*** xref:cards:create-card.adoc[]
-*** xref:cards:delete-object.adoc[]
-*** xref:cards:card-lock.adoc[]
-*** xref:cards:card-archive.adoc[]
-*** xref:cards:search.adoc[]
-*** xref:cards:export-import-print.adoc[]
-*** xref:cards:signing-encryption.adoc[]
-*** xref:cards:bo-lib/library.adoc[]
-**** xref:cards:bo-lib/business-calendar.adoc[]
-**** xref:cards:bo-lib/document.adoc[]
-**** xref:cards:bo-lib/task-group.adoc[]
-**** xref:cards:bo-lib/task.adoc[]
-**** xref:cards:bo-lib/role-model.adoc[]
-**** xref:cards:bo-lib/states-dictionary.adoc[]
-**** xref:cards:bo-lib/base-universal.adoc[]
-**** xref:cards:bo-lib/task-list.adoc[]
-**** xref:cards:bo-lib/kinds.adoc[]
-**** xref:cards:bo-lib/partners.adoc[]
-**** xref:cards:bo-lib/staff.adoc[]
-** xref:cards:folder-shortcut.adoc[]
-** xref:cards:files.adoc[]
-** xref:cards:access-control.adoc[]
-** xref:cards:use-reports.adoc[]
-** xref:cards:numerators.adoc[]
+*** xref:cards:general-information.adoc[]
+*** xref:cards:connect-to-dv-server.adoc[]
+*** xref:cards:init-object-context.adoc[]
+*** xref:cards:work-cards.adoc[]
+**** xref:cards:get-card.adoc[]
+**** xref:cards:get-section.adoc[]
+**** xref:cards:edit-card.adoc[]
+**** xref:cards:create-card.adoc[]
+**** xref:cards:delete-object.adoc[]
+**** xref:cards:card-lock.adoc[]
+**** xref:cards:card-archive.adoc[]
+**** xref:cards:search.adoc[]
+**** xref:cards:export-import-print.adoc[]
+**** xref:cards:signing-encryption.adoc[]
+**** xref:cards:bo-lib/library.adoc[]
+***** xref:cards:bo-lib/business-calendar.adoc[]
+***** xref:cards:bo-lib/document.adoc[]
+***** xref:cards:bo-lib/task-group.adoc[]
+***** xref:cards:bo-lib/task.adoc[]
+***** xref:cards:bo-lib/role-model.adoc[]
+***** xref:cards:bo-lib/states-dictionary.adoc[]
+***** xref:cards:bo-lib/base-universal.adoc[]
+***** xref:cards:bo-lib/task-list.adoc[]
+***** xref:cards:bo-lib/kinds.adoc[]
+***** xref:cards:bo-lib/partners.adoc[]
+***** xref:cards:bo-lib/staff.adoc[]
+*** xref:cards:folder-shortcut.adoc[]
+*** xref:cards:files.adoc[]
+*** xref:cards:access-control.adoc[]
+*** xref:cards:use-reports.adoc[]
+*** xref:cards:numerators.adoc[]
