--- a/modules/ROOT/partials/docman.adoc
+++ b/modules/ROOT/partials/docman.adoc
@@ -1,6 +1,6 @@
-*** xref:DocumentsManagement:DocumentsManagement_NS.adoc[]
-**** xref:DocumentsManagement:ObjectModel/ObjectModel_NS.adoc[]
-***** xref:DocumentsManagement:ObjectModel/IReconcileService_IN.adoc[]
-****** xref:DocumentsManagement:ObjectModel/IReconcileService.CreateReconciliationCard_MT.adoc[]
-****** xref:DocumentsManagement:ObjectModel/IReconcileService.FillFiles_MT.adoc[]
-****** xref:DocumentsManagement:ObjectModel/IReconcileService.HandleDocumentAfterReconcileCreated_MT.adoc[]
+**** xref:DocumentsManagement:DocumentsManagement_NS.adoc[]
+***** xref:DocumentsManagement:ObjectModel/ObjectModel_NS.adoc[]
+****** xref:DocumentsManagement:ObjectModel/IReconcileService_IN.adoc[]
+******* xref:DocumentsManagement:ObjectModel/IReconcileService.CreateReconciliationCard_MT.adoc[]
+******* xref:DocumentsManagement:ObjectModel/IReconcileService.FillFiles_MT.adoc[]
+******* xref:DocumentsManagement:ObjectModel/IReconcileService.HandleDocumentAfterReconcileCreated_MT.adoc[]
