--- a/modules/ROOT/partials/external-storages.adoc
+++ b/modules/ROOT/partials/external-storages.adoc
@@ -1,7 +1,7 @@
-** xref:external-storages:external-storages-develop.adoc[]
-*** xref:external-storages:сonnector-to-storage.adoc[]
-**** xref:external-storages:main-provider-class.adoc[]
-**** xref:external-storages:provider-gui.adoc[]
-**** xref:external-storages:load-storage-connector.adoc[]
-**** xref:external-storages:connector-sample.adoc[]
-*** xref:external-storages:storage-rule.adoc[]
+*** xref:external-storages:external-storages-develop.adoc[]
+**** xref:external-storages:сonnector-to-storage.adoc[]
+***** xref:external-storages:main-provider-class.adoc[]
+***** xref:external-storages:provider-gui.adoc[]
+***** xref:external-storages:load-storage-connector.adoc[]
+***** xref:external-storages:connector-sample.adoc[]
+**** xref:external-storages:storage-rule.adoc[]
