--- a/modules/ROOT/partials/pl-cardhost.adoc
+++ b/modules/ROOT/partials/pl-cardhost.adoc
@@ -1,32 +1,32 @@
-*** xref:Platform-CardHost:Platform_NS.adoc[]
-**** xref:Platform-CardHost:CardHost/CardHost_NS.adoc[]
-***** xref:Platform-CardHost:CardHost/CardEventArgs_CL.adoc[]
-***** xref:Platform-CardHost:CardHost/CardHost_CL.adoc[]
-****** xref:Platform-CardHost:CardHost/CardHost.CreateInstance_MT.adoc[]
-***** xref:Platform-CardHost:CardHost/NavFolderType_CL.adoc[]
-***** xref:Platform-CardHost:CardHost/ParameterCollection_CL.adoc[]
-***** xref:Platform-CardHost:CardHost/RefreshEventArgs_CL.adoc[]
-****** xref:Platform-CardHost:CardHost/RefreshEventArgs_CT.adoc[]
-****** xref:Platform-CardHost:CardHost/RefreshEventArgs.IsFull_PR.adoc[]
-***** xref:Platform-CardHost:CardHost/ICardFrame_IN.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardFrame.FinishSelection_MT.adoc[]
-***** xref:Platform-CardHost:CardHost/ICardHost_IN.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.ActivateFolder_MT.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.CreateCard_MT.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.SelectCard_MT.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.SelectCard_1_MT.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.SelectFromCard_MT.adoc[]
-****** xref:Platform-CardHost:CardHost/ICardHost.SelectFromCard_1_MT.adoc[]
-***** xref:Platform-CardHost:CardHost/IPropertyPageFrame_IN.adoc[]
-***** xref:Platform-CardHost:CardHost/IReusableCardComponent_IN.adoc[]
-****** xref:Platform-CardHost:CardHost/IReusableCardComponent.CanBeReused_PR.adoc[]
-****** xref:Platform-CardHost:CardHost/IReusableCardComponent.Mode_PR.adoc[]
-***** xref:Platform-CardHost:CardHost/ActionFlags_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/ActivateFlags_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/ActivateMode_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/EditSecurityFlags_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/MessageButtons_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/MessageResult_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/MessageType_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/ReusageMode_EN.adoc[]
-***** xref:Platform-CardHost:CardHost/SystemDialogType_EN.adoc[]
+**** xref:Platform-CardHost:Platform_NS.adoc[]
+***** xref:Platform-CardHost:CardHost/CardHost_NS.adoc[]
+****** xref:Platform-CardHost:CardHost/CardEventArgs_CL.adoc[]
+****** xref:Platform-CardHost:CardHost/CardHost_CL.adoc[]
+******* xref:Platform-CardHost:CardHost/CardHost.CreateInstance_MT.adoc[]
+****** xref:Platform-CardHost:CardHost/NavFolderType_CL.adoc[]
+****** xref:Platform-CardHost:CardHost/ParameterCollection_CL.adoc[]
+****** xref:Platform-CardHost:CardHost/RefreshEventArgs_CL.adoc[]
+******* xref:Platform-CardHost:CardHost/RefreshEventArgs_CT.adoc[]
+******* xref:Platform-CardHost:CardHost/RefreshEventArgs.IsFull_PR.adoc[]
+****** xref:Platform-CardHost:CardHost/ICardFrame_IN.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardFrame.FinishSelection_MT.adoc[]
+****** xref:Platform-CardHost:CardHost/ICardHost_IN.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.ActivateFolder_MT.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.CreateCard_MT.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.SelectCard_MT.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.SelectCard_1_MT.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.SelectFromCard_MT.adoc[]
+******* xref:Platform-CardHost:CardHost/ICardHost.SelectFromCard_1_MT.adoc[]
+****** xref:Platform-CardHost:CardHost/IPropertyPageFrame_IN.adoc[]
+****** xref:Platform-CardHost:CardHost/IReusableCardComponent_IN.adoc[]
+******* xref:Platform-CardHost:CardHost/IReusableCardComponent.CanBeReused_PR.adoc[]
+******* xref:Platform-CardHost:CardHost/IReusableCardComponent.Mode_PR.adoc[]
+****** xref:Platform-CardHost:CardHost/ActionFlags_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/ActivateFlags_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/ActivateMode_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/EditSecurityFlags_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/MessageButtons_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/MessageResult_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/MessageType_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/ReusageMode_EN.adoc[]
+****** xref:Platform-CardHost:CardHost/SystemDialogType_EN.adoc[]
