--- a/modules/ROOT/partials/pl-om-accessmanager.adoc
+++ b/modules/ROOT/partials/pl-om-accessmanager.adoc
@@ -1,7 +1,7 @@
-***** xref:Platform-ObjectManager-AccessManager:AccessManager_CL.adoc[]
-****** xref:Platform-ObjectManager-AccessManager:AccessManager.SecuritySchema_PR.adoc[]
-****** xref:Platform-ObjectManager-AccessManager:AccessManager.Session_PR.adoc[]
-****** xref:Platform-ObjectManager-AccessManager:AccessManager.AccessCheck_MT.adoc[]
-****** xref:Platform-ObjectManager-AccessManager:AccessManager.CreateCustomSecureObject_MT.adoc[]
-***** xref:Platform-ObjectManager-AccessManager:ArchiveOptions_EN.adoc[]
-***** xref:Platform-ObjectManager-AccessManager:ArchiveState_EN.adoc[]
+****** xref:Platform-ObjectManager-AccessManager:AccessManager_CL.adoc[]
+******* xref:Platform-ObjectManager-AccessManager:AccessManager.SecuritySchema_PR.adoc[]
+******* xref:Platform-ObjectManager-AccessManager:AccessManager.Session_PR.adoc[]
+******* xref:Platform-ObjectManager-AccessManager:AccessManager.AccessCheck_MT.adoc[]
+******* xref:Platform-ObjectManager-AccessManager:AccessManager.CreateCustomSecureObject_MT.adoc[]
+****** xref:Platform-ObjectManager-AccessManager:ArchiveOptions_EN.adoc[]
+****** xref:Platform-ObjectManager-AccessManager:ArchiveState_EN.adoc[]
