--- a/modules/ROOT/partials/pl-om-ilockable.adoc
+++ b/modules/ROOT/partials/pl-om-ilockable.adoc
@@ -1,9 +1,9 @@
-***** xref:Platform-ObjectManager-ILockable:FileData_CL.adoc[]
-***** xref:Platform-ObjectManager-ILockable:FileManager_CL.adoc[]
-***** xref:Platform-ObjectManager-ILockable:ILockable_IN.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.LockOwner_PR.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.LockStatus_PR.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.ForceUnlock_MT.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.PlaceLock_MT.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.PlaceLock_1_MT.adoc[]
-****** xref:Platform-ObjectManager-ILockable:ILockable.RemoveLock_MT.adoc[]
+****** xref:Platform-ObjectManager-ILockable:FileData_CL.adoc[]
+****** xref:Platform-ObjectManager-ILockable:FileManager_CL.adoc[]
+****** xref:Platform-ObjectManager-ILockable:ILockable_IN.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.LockOwner_PR.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.LockStatus_PR.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.ForceUnlock_MT.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.PlaceLock_MT.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.PlaceLock_1_MT.adoc[]
+******* xref:Platform-ObjectManager-ILockable:ILockable.RemoveLock_MT.adoc[]
