--- a/modules/ROOT/partials/pl-om-iupdatable.adoc
+++ b/modules/ROOT/partials/pl-om-iupdatable.adoc
@@ -1,13 +1,13 @@
-***** xref:Platform-ObjectManager-IUpdatable:ImportCardInspector_CL.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:InfoRowCollection_CL.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:IProcessInfo_IN.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:ISecurable_IN.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:IProcessInfo_IN.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:ISecurable_IN.adoc[]
-***** xref:Platform-ObjectManager-IUpdatable:IUpdatable_IN.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.InUpdate_PR.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.BeginUpdate_MT.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.CancelUpdate_MT.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.EndUpdate_MT.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.MarkCardForDeletion_MT.adoc[]
-****** xref:Platform-ObjectManager-IUpdatable:IUpdatable.UpdateNow_MT.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:ImportCardInspector_CL.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:InfoRowCollection_CL.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:IProcessInfo_IN.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:ISecurable_IN.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:IProcessInfo_IN.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:ISecurable_IN.adoc[]
+****** xref:Platform-ObjectManager-IUpdatable:IUpdatable_IN.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.InUpdate_PR.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.BeginUpdate_MT.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.CancelUpdate_MT.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.EndUpdate_MT.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.MarkCardForDeletion_MT.adoc[]
+******* xref:Platform-ObjectManager-IUpdatable:IUpdatable.UpdateNow_MT.adoc[]
