--- a/modules/ROOT/partials/pl-security.adoc
+++ b/modules/ROOT/partials/pl-security.adoc
@@ -1,27 +1,27 @@
-**** xref:Platform-Security:Security_NS.adoc[]
-***** xref:Platform-Security:AccessControl/AccessControl_NS.adoc[]
-****** xref:Platform-Security:AccessControl/CardDataAccessRule_CL.adoc[]
-****** xref:Platform-Security:AccessControl/CardDataSecurity_CL.adoc[]
-******* xref:Platform-Security:AccessControl/CardDataSecurity_CT.adoc[]
-******* xref:Platform-Security:AccessControl/CardDataSecurity.AddAccessRule_MT.adoc[]
-******* xref:Platform-Security:AccessControl/CardDataSecurity.RemoveAccessRuleSpecific_MT.adoc[]
-******* xref:Platform-Security:AccessControl/CardDataSecurity.SetAccessRule_MT.adoc[]
-****** xref:Platform-Security:AccessControl/DVObjectSecurity_CL.adoc[]
-******* xref:Platform-Security:AccessControl/DVObjectSecurity.ObjectType_PR.adoc[]
-****** xref:Platform-Security:AccessControl/ReportSecurity_CL.adoc[]
-****** xref:Platform-Security:AccessControl/GenericMapping_ST.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.Equals_MT.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.Equality_OP.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.Inequality_OP.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.GenericAll_FL.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.GenericExecute_FL.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.GenericRead_FL.adoc[]
-******* xref:Platform-Security:AccessControl/GenericMapping.GenericWrite_FL.adoc[]
-****** xref:Platform-Security:AccessControl/ISecureObject_IN.adoc[]
-****** xref:Platform-Security:AccessControl/AccessControlPropagation_EN.adoc[]
-****** xref:Platform-Security:AccessControl/CardDataRights_EN.adoc[]
-****** xref:Platform-Security:AccessControl/FileDataRights_EN.adoc[]
-****** xref:Platform-Security:AccessControl/MandatoryAccessLevel_EN.adoc[]
-****** xref:Platform-Security:AccessControl/MandatoryAccessRights_EN.adoc[]
-****** xref:Platform-Security:AccessControl/SecureObjectType_EN.adoc[]
-****** xref:Platform-Security:AccessControl/ReportRights_EN.adoc[]
+***** xref:Platform-Security:Security_NS.adoc[]
+****** xref:Platform-Security:AccessControl/AccessControl_NS.adoc[]
+******* xref:Platform-Security:AccessControl/CardDataAccessRule_CL.adoc[]
+******* xref:Platform-Security:AccessControl/CardDataSecurity_CL.adoc[]
+******** xref:Platform-Security:AccessControl/CardDataSecurity_CT.adoc[]
+******** xref:Platform-Security:AccessControl/CardDataSecurity.AddAccessRule_MT.adoc[]
+******** xref:Platform-Security:AccessControl/CardDataSecurity.RemoveAccessRuleSpecific_MT.adoc[]
+******** xref:Platform-Security:AccessControl/CardDataSecurity.SetAccessRule_MT.adoc[]
+******* xref:Platform-Security:AccessControl/DVObjectSecurity_CL.adoc[]
+******** xref:Platform-Security:AccessControl/DVObjectSecurity.ObjectType_PR.adoc[]
+******* xref:Platform-Security:AccessControl/ReportSecurity_CL.adoc[]
+******* xref:Platform-Security:AccessControl/GenericMapping_ST.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.Equals_MT.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.Equality_OP.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.Inequality_OP.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.GenericAll_FL.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.GenericExecute_FL.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.GenericRead_FL.adoc[]
+******** xref:Platform-Security:AccessControl/GenericMapping.GenericWrite_FL.adoc[]
+******* xref:Platform-Security:AccessControl/ISecureObject_IN.adoc[]
+******* xref:Platform-Security:AccessControl/AccessControlPropagation_EN.adoc[]
+******* xref:Platform-Security:AccessControl/CardDataRights_EN.adoc[]
+******* xref:Platform-Security:AccessControl/FileDataRights_EN.adoc[]
+******* xref:Platform-Security:AccessControl/MandatoryAccessLevel_EN.adoc[]
+******* xref:Platform-Security:AccessControl/MandatoryAccessRights_EN.adoc[]
+******* xref:Platform-Security:AccessControl/SecureObjectType_EN.adoc[]
+******* xref:Platform-Security:AccessControl/ReportRights_EN.adoc[]
