--- a/modules/ROOT/partials/pl-storageserver.adoc
+++ b/modules/ROOT/partials/pl-storageserver.adoc
@@ -1,28 +1,28 @@
-**** xref:Platform-StorageServer:StorageServer_NS.adoc[]
-***** xref:Platform-StorageServer:Cursors/Cursors_NS.adoc[]
-****** xref:Platform-StorageServer:Cursors/CursorBuilder_CL.adoc[]
-***** xref:Platform-StorageServer:Extensibility/Extensibility_NS.adoc[]
-****** xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_CL.adoc[]
-******* xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_1_CT.adoc[]
-****** xref:Platform-StorageServer:Extensibility/StorageServerExtension_CL.adoc[]
-******* xref:Platform-StorageServer:Extensibility/StorageServerExtension.GetCursorBuilder_MT.adoc[]
-******* xref:Platform-StorageServer:Extensibility/StorageServerExtension.ExecuteCursorCommand_MT.adoc[]
-***** xref:Platform-StorageServer:Files/Files_NS.adoc[]
-****** xref:Platform-StorageServer:Files/IFileInfo_IN.adoc[]
-***** xref:Platform-StorageServer:CursorInfo_ST.adoc[]
-***** xref:Platform-StorageServer:IBinaryStorage_IN.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.SupportedPartions_PR.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.CanSafelyMove_MT.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.Create_MT.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.CreateFrom_MT.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.Read_MT.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.SafeMove_MT.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorage.Write_MT.adoc[]
-***** xref:Platform-StorageServer:IBinaryStorageRule_IN.adoc[]
-****** xref:Platform-StorageServer:IBinaryStorageRule.IsRuleSatisfied_MT.adoc[]
-***** xref:Platform-StorageServer:IEnumerableBinaryStorage_IN.adoc[]
-***** xref:Platform-StorageServer:IExtensionInitialize_IN.adoc[]
-****** xref:Platform-StorageServer:IExtensionInitialize.Initialize_MT.adoc[]
-***** xref:Platform-StorageServer:IStreamedBinaryStorage_IN.adoc[]
-***** xref:Platform-StorageServer:StoragePartitionType_EN.adoc[]
-***** xref:Platform-StorageServer:UserRoles_EN.adoc[]
+***** xref:Platform-StorageServer:StorageServer_NS.adoc[]
+****** xref:Platform-StorageServer:Cursors/Cursors_NS.adoc[]
+******* xref:Platform-StorageServer:Cursors/CursorBuilder_CL.adoc[]
+****** xref:Platform-StorageServer:Extensibility/Extensibility_NS.adoc[]
+******* xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_CL.adoc[]
+******** xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_1_CT.adoc[]
+******* xref:Platform-StorageServer:Extensibility/StorageServerExtension_CL.adoc[]
+******** xref:Platform-StorageServer:Extensibility/StorageServerExtension.GetCursorBuilder_MT.adoc[]
+******** xref:Platform-StorageServer:Extensibility/StorageServerExtension.ExecuteCursorCommand_MT.adoc[]
+****** xref:Platform-StorageServer:Files/Files_NS.adoc[]
+******* xref:Platform-StorageServer:Files/IFileInfo_IN.adoc[]
+****** xref:Platform-StorageServer:CursorInfo_ST.adoc[]
+****** xref:Platform-StorageServer:IBinaryStorage_IN.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.SupportedPartions_PR.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.CanSafelyMove_MT.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.Create_MT.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.CreateFrom_MT.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.Read_MT.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.SafeMove_MT.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorage.Write_MT.adoc[]
+****** xref:Platform-StorageServer:IBinaryStorageRule_IN.adoc[]
+******* xref:Platform-StorageServer:IBinaryStorageRule.IsRuleSatisfied_MT.adoc[]
+****** xref:Platform-StorageServer:IEnumerableBinaryStorage_IN.adoc[]
+****** xref:Platform-StorageServer:IExtensionInitialize_IN.adoc[]
+******* xref:Platform-StorageServer:IExtensionInitialize.Initialize_MT.adoc[]
+****** xref:Platform-StorageServer:IStreamedBinaryStorage_IN.adoc[]
+****** xref:Platform-StorageServer:StoragePartitionType_EN.adoc[]
+****** xref:Platform-StorageServer:UserRoles_EN.adoc[]
