--- a/modules/ROOT/partials/views.adoc
+++ b/modules/ROOT/partials/views.adoc
@@ -1,8 +1,8 @@
-** xref:views:views.adoc[]
-*** xref:views:data-description.adoc[]
-*** xref:views:formating-description.adoc[]
-*** xref:views:get-data.adoc[]
-** xref:views:links.adoc[]
-** xref:views:download-mode.adoc[]
-** xref:views:delayed-changes.adoc[]
-** xref:views:event-logs.adoc[]
+*** xref:views:views.adoc[]
+**** xref:views:data-description.adoc[]
+**** xref:views:formating-description.adoc[]
+**** xref:views:get-data.adoc[]
+*** xref:views:links.adoc[]
+*** xref:views:download-mode.adoc[]
+*** xref:views:delayed-changes.adoc[]
+*** xref:views:event-logs.adoc[]
