--- a/modules/ROOT/partials/workflow-api.adoc
+++ b/modules/ROOT/partials/workflow-api.adoc
@@ -1,133 +1,133 @@
-*** xref:Workflow:Workflow_NS.adoc[]
-**** xref:Workflow:Gates/Gates_NS.adoc[]
-***** xref:Workflow:Gates/BasicGate_CL.adoc[]
-****** xref:Workflow:Gates/BasicGate.GetEnumDisplayValue_MT.adoc[]
-***** xref:Workflow:Gates/DVGate_CL.adoc[]
-****** xref:Workflow:Gates/DVGate.BaseURL_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.FoldersCard_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.MessageChannel_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.RefPartners_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.RefStaff_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.RefUniversal_PR.adoc[]
-****** xref:Workflow:Gates/DVGate.AddVariable_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CopyCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CopyCards_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CopyVariable_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateCardInFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateDVFileFromExAttachment_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateDVFileFromExAttachmentInFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateDVFileFromFSFile_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateDVFileFromFSFileInFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.CreateFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.DeleteCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.DeleteFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.DeleteShortcut_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.DeleteVariable_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetCardHardLink_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetCardSecurable_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetCardTypeByID_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetCurrentProcess_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetDocStateByName_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetDocStates_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetDocumentByTypeID_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetFunctionLinkedCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetRow_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetVariable_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GetVariableReference_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.ImportCard_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.ImportCardFromFile_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.ImportCardIntoFolder_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.ImportCardIntoFolderFromFile_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.IsVariableExists_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.SendMessageToProcess_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.SendMessageToProcessFunctions_MT.adoc[]
-****** xref:Workflow:Gates/DVGate.GateID_FL.adoc[]
-****** xref:Workflow:Gates/DVGate.GateName_FL.adoc[]
-***** xref:Workflow:Gates/ExGate_CL.adoc[]
-****** xref:Workflow:Gates/ExGate.ServerAddress_PR.adoc[]
-****** xref:Workflow:Gates/ExGate.AddVariable_MT.adoc[]
-***** xref:Workflow:Gates/FSGate_CL.adoc[]
-****** xref:Workflow:Gates/FSGate.AddVariable_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.CompareVariables_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.CreateFile_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.CreateFolder_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.DeleteVariable_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.GetVariable_MT.adoc[]
-****** xref:Workflow:Gates/FSGate.GateID_FL.adoc[]
-****** xref:Workflow:Gates/FSGate.GateName_FL.adoc[]
-***** xref:Workflow:Gates/FSSubscriptionInfo_CL.adoc[]
-***** xref:Workflow:Gates/MailFilter_CL.adoc[]
-***** xref:Workflow:Gates/MessageChannel_CL.adoc[]
-***** xref:Workflow:Gates/ICollectionalProperty_IN.adoc[]
-***** xref:Workflow:Gates/IGate_IN.adoc[]
-****** xref:Workflow:Gates/IGate.Data_PR.adoc[]
-****** xref:Workflow:Gates/IGate.ExecutionMode_PR.adoc[]
-****** xref:Workflow:Gates/IGate.ID_PR.adoc[]
-****** xref:Workflow:Gates/IGate.AddVariable_MT.adoc[]
-****** xref:Workflow:Gates/IGate.CompareVariables_MT.adoc[]
-****** xref:Workflow:Gates/IGate.CopyVariable_MT.adoc[]
-****** xref:Workflow:Gates/IGate.DeleteVariable_MT.adoc[]
-****** xref:Workflow:Gates/IGate.GetVariable_MT.adoc[]
-****** xref:Workflow:Gates/IGate.GetVariableInternalReference_MT.adoc[]
-****** xref:Workflow:Gates/IGate.GetVariableReference_MT.adoc[]
-***** xref:Workflow:Gates/IGateMessageSource_IN.adoc[]
-****** xref:Workflow:Gates/IGateMessageSource.SubscriptionChannel_PR.adoc[]
-****** xref:Workflow:Gates/IGateMessageSource.Initialize_MT.adoc[]
-***** xref:Workflow:Gates/IGateVariable_IN.adoc[]
-***** xref:Workflow:Gates/IGateVariableCustomProperties_IN.adoc[]
-***** xref:Workflow:Gates/ILicensableObject_IN.adoc[]
-***** xref:Workflow:Gates/ILockableObject_IN.adoc[]
-***** xref:Workflow:Gates/ISubscriptionChannel_IN.adoc[]
-****** xref:Workflow:Gates/ISubscriptionChannel.Subscribe_MT.adoc[]
-***** xref:Workflow:Gates/DocsVisionSubscriptionType_EN.adoc[]
-***** xref:Workflow:Gates/DVVariableType_EN.adoc[]
-***** xref:Workflow:Gates/FSSubscriptionType_EN.adoc[]
-***** xref:Workflow:Gates/MailSubscriptionType_EN.adoc[]
-**** xref:Workflow:Functions/Functions_NS.adoc[]
-***** xref:Workflow:Functions/IFunction_IN.adoc[]
-***** xref:Workflow:Functions/ExecResultEnum_EN.adoc[]
-**** xref:Workflow:Objects/Objects_NS.adoc[]
-***** xref:Workflow:Objects/Constraint_CL.adoc[]
-***** xref:Workflow:Objects/ConstraintWrapper_CL.adoc[]
-***** xref:Workflow:Objects/DocType_CL.adoc[]
-***** xref:Workflow:Objects/DocTypeWrapper_CL.adoc[]
-***** xref:Workflow:Objects/DictGate_CL.adoc[]
-***** xref:Workflow:Objects/DictGateWrapper_CL.adoc[]
-***** xref:Workflow:Objects/DictFunction_CL.adoc[]
-***** xref:Workflow:Objects/DictFunctionWrapper_CL.adoc[]
-***** xref:Workflow:Objects/Dictionary_CL.adoc[]
-***** xref:Workflow:Objects/EnumValue_CL.adoc[]
-***** xref:Workflow:Objects/EnumValueWrapper_CL.adoc[]
-***** xref:Workflow:Objects/Gate_CL.adoc[]
-***** xref:Workflow:Objects/GateWrapper_CL.adoc[]
-***** xref:Workflow:Objects/Library_CL.adoc[]
-***** xref:Workflow:Objects/Link_CL.adoc[]
-***** xref:Workflow:Objects/LinkWrapper_CL.adoc[]
-***** xref:Workflow:Objects/LogMessage_CL.adoc[]
-***** xref:Workflow:Objects/LogMessageWrapper_CL.adoc[]
-***** xref:Workflow:Objects/LogValue_CL.adoc[]
-***** xref:Workflow:Objects/LogValueWrapper_CL.adoc[]
-***** xref:Workflow:Objects/PassState_CL.adoc[]
-***** xref:Workflow:Objects/PassStateWrapper_CL.adoc[]
-***** xref:Workflow:Objects/Process_CL.adoc[]
-***** xref:Workflow:Objects/ProcessWrapper_CL.adoc[]
-***** xref:Workflow:Objects/ProcFunction_CL.adoc[]
-***** xref:Workflow:Objects/Variable_CL.adoc[]
-***** xref:Workflow:Objects/VariableWrapper_CL.adoc[]
-***** xref:Workflow:Objects/ActionTypeEnum_EN.adoc[]
-***** xref:Workflow:Objects/ExecutionModeEnum_EN.adoc[]
-***** xref:Workflow:Objects/FuncStateEnum_EN.adoc[]
-***** xref:Workflow:Objects/LinkTypeEnum_EN.adoc[]
-***** xref:Workflow:Objects/ProcessStateEnum_EN.adoc[]
-***** xref:Workflow:Objects/TemplateStateEnum_EN.adoc[]
-***** xref:Workflow:Objects/VarTypeEnum_EN.adoc[]
-**** xref:Workflow:ObjectsUI/ObjectsUI_NS.adoc[]
-***** xref:Workflow:ObjectsUI/IObjectLicenseInfo_IN.adoc[]
-***** xref:Workflow:ObjectsUI/IObjectLocalize_IN.adoc[]
-***** xref:Workflow:ObjectsUI/IObjectUI_IN.adoc[]
-***** xref:Workflow:ObjectsUI/LicenseTypeEnum_EN.adoc[]
-**** xref:Workflow:Runtime/Runtime_EN.adoc[]
-***** xref:Workflow:Runtime/ProcessInfo_CL.adoc[]
-***** xref:Workflow:Runtime/ProcessVariable_CL.adoc[]
+**** xref:Workflow:Workflow_NS.adoc[]
+***** xref:Workflow:Gates/Gates_NS.adoc[]
+****** xref:Workflow:Gates/BasicGate_CL.adoc[]
+******* xref:Workflow:Gates/BasicGate.GetEnumDisplayValue_MT.adoc[]
+****** xref:Workflow:Gates/DVGate_CL.adoc[]
+******* xref:Workflow:Gates/DVGate.BaseURL_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.FoldersCard_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.MessageChannel_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.RefPartners_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.RefStaff_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.RefUniversal_PR.adoc[]
+******* xref:Workflow:Gates/DVGate.AddVariable_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CopyCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CopyCards_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CopyVariable_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateCardInFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateDVFileFromExAttachment_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateDVFileFromExAttachmentInFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateDVFileFromFSFile_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateDVFileFromFSFileInFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.CreateFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.DeleteCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.DeleteFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.DeleteShortcut_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.DeleteVariable_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetCardHardLink_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetCardSecurable_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetCardTypeByID_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetCurrentProcess_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetDocStateByName_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetDocStates_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetDocumentByTypeID_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetFunctionLinkedCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetRow_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetVariable_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GetVariableReference_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.ImportCard_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.ImportCardFromFile_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.ImportCardIntoFolder_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.ImportCardIntoFolderFromFile_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.IsVariableExists_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.SendMessageToProcess_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.SendMessageToProcessFunctions_MT.adoc[]
+******* xref:Workflow:Gates/DVGate.GateID_FL.adoc[]
+******* xref:Workflow:Gates/DVGate.GateName_FL.adoc[]
+****** xref:Workflow:Gates/ExGate_CL.adoc[]
+******* xref:Workflow:Gates/ExGate.ServerAddress_PR.adoc[]
+******* xref:Workflow:Gates/ExGate.AddVariable_MT.adoc[]
+****** xref:Workflow:Gates/FSGate_CL.adoc[]
+******* xref:Workflow:Gates/FSGate.AddVariable_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.CompareVariables_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.CreateFile_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.CreateFolder_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.DeleteVariable_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.GetVariable_MT.adoc[]
+******* xref:Workflow:Gates/FSGate.GateID_FL.adoc[]
+******* xref:Workflow:Gates/FSGate.GateName_FL.adoc[]
+****** xref:Workflow:Gates/FSSubscriptionInfo_CL.adoc[]
+****** xref:Workflow:Gates/MailFilter_CL.adoc[]
+****** xref:Workflow:Gates/MessageChannel_CL.adoc[]
+****** xref:Workflow:Gates/ICollectionalProperty_IN.adoc[]
+****** xref:Workflow:Gates/IGate_IN.adoc[]
+******* xref:Workflow:Gates/IGate.Data_PR.adoc[]
+******* xref:Workflow:Gates/IGate.ExecutionMode_PR.adoc[]
+******* xref:Workflow:Gates/IGate.ID_PR.adoc[]
+******* xref:Workflow:Gates/IGate.AddVariable_MT.adoc[]
+******* xref:Workflow:Gates/IGate.CompareVariables_MT.adoc[]
+******* xref:Workflow:Gates/IGate.CopyVariable_MT.adoc[]
+******* xref:Workflow:Gates/IGate.DeleteVariable_MT.adoc[]
+******* xref:Workflow:Gates/IGate.GetVariable_MT.adoc[]
+******* xref:Workflow:Gates/IGate.GetVariableInternalReference_MT.adoc[]
+******* xref:Workflow:Gates/IGate.GetVariableReference_MT.adoc[]
+****** xref:Workflow:Gates/IGateMessageSource_IN.adoc[]
+******* xref:Workflow:Gates/IGateMessageSource.SubscriptionChannel_PR.adoc[]
+******* xref:Workflow:Gates/IGateMessageSource.Initialize_MT.adoc[]
+****** xref:Workflow:Gates/IGateVariable_IN.adoc[]
+****** xref:Workflow:Gates/IGateVariableCustomProperties_IN.adoc[]
+****** xref:Workflow:Gates/ILicensableObject_IN.adoc[]
+****** xref:Workflow:Gates/ILockableObject_IN.adoc[]
+****** xref:Workflow:Gates/ISubscriptionChannel_IN.adoc[]
+******* xref:Workflow:Gates/ISubscriptionChannel.Subscribe_MT.adoc[]
+****** xref:Workflow:Gates/DocsVisionSubscriptionType_EN.adoc[]
+****** xref:Workflow:Gates/DVVariableType_EN.adoc[]
+****** xref:Workflow:Gates/FSSubscriptionType_EN.adoc[]
+****** xref:Workflow:Gates/MailSubscriptionType_EN.adoc[]
+***** xref:Workflow:Functions/Functions_NS.adoc[]
+****** xref:Workflow:Functions/IFunction_IN.adoc[]
+****** xref:Workflow:Functions/ExecResultEnum_EN.adoc[]
+***** xref:Workflow:Objects/Objects_NS.adoc[]
+****** xref:Workflow:Objects/Constraint_CL.adoc[]
+****** xref:Workflow:Objects/ConstraintWrapper_CL.adoc[]
+****** xref:Workflow:Objects/DocType_CL.adoc[]
+****** xref:Workflow:Objects/DocTypeWrapper_CL.adoc[]
+****** xref:Workflow:Objects/DictGate_CL.adoc[]
+****** xref:Workflow:Objects/DictGateWrapper_CL.adoc[]
+****** xref:Workflow:Objects/DictFunction_CL.adoc[]
+****** xref:Workflow:Objects/DictFunctionWrapper_CL.adoc[]
+****** xref:Workflow:Objects/Dictionary_CL.adoc[]
+****** xref:Workflow:Objects/EnumValue_CL.adoc[]
+****** xref:Workflow:Objects/EnumValueWrapper_CL.adoc[]
+****** xref:Workflow:Objects/Gate_CL.adoc[]
+****** xref:Workflow:Objects/GateWrapper_CL.adoc[]
+****** xref:Workflow:Objects/Library_CL.adoc[]
+****** xref:Workflow:Objects/Link_CL.adoc[]
+****** xref:Workflow:Objects/LinkWrapper_CL.adoc[]
+****** xref:Workflow:Objects/LogMessage_CL.adoc[]
+****** xref:Workflow:Objects/LogMessageWrapper_CL.adoc[]
+****** xref:Workflow:Objects/LogValue_CL.adoc[]
+****** xref:Workflow:Objects/LogValueWrapper_CL.adoc[]
+****** xref:Workflow:Objects/PassState_CL.adoc[]
+****** xref:Workflow:Objects/PassStateWrapper_CL.adoc[]
+****** xref:Workflow:Objects/Process_CL.adoc[]
+****** xref:Workflow:Objects/ProcessWrapper_CL.adoc[]
+****** xref:Workflow:Objects/ProcFunction_CL.adoc[]
+****** xref:Workflow:Objects/Variable_CL.adoc[]
+****** xref:Workflow:Objects/VariableWrapper_CL.adoc[]
+****** xref:Workflow:Objects/ActionTypeEnum_EN.adoc[]
+****** xref:Workflow:Objects/ExecutionModeEnum_EN.adoc[]
+****** xref:Workflow:Objects/FuncStateEnum_EN.adoc[]
+****** xref:Workflow:Objects/LinkTypeEnum_EN.adoc[]
+****** xref:Workflow:Objects/ProcessStateEnum_EN.adoc[]
+****** xref:Workflow:Objects/TemplateStateEnum_EN.adoc[]
+****** xref:Workflow:Objects/VarTypeEnum_EN.adoc[]
+***** xref:Workflow:ObjectsUI/ObjectsUI_NS.adoc[]
+****** xref:Workflow:ObjectsUI/IObjectLicenseInfo_IN.adoc[]
+****** xref:Workflow:ObjectsUI/IObjectLocalize_IN.adoc[]
+****** xref:Workflow:ObjectsUI/IObjectUI_IN.adoc[]
+****** xref:Workflow:ObjectsUI/LicenseTypeEnum_EN.adoc[]
+***** xref:Workflow:Runtime/Runtime_EN.adoc[]
+****** xref:Workflow:Runtime/ProcessInfo_CL.adoc[]
+****** xref:Workflow:Runtime/ProcessVariable_CL.adoc[]
