--- a/modules/ROOT/partials/bo-cards.adoc
+++ b/modules/ROOT/partials/bo-cards.adoc
@@ -1,38 +1,38 @@
-**** xref:BackOffice-Cards:Cards_NS.adoc[]
-***** xref:BackOffice-Cards:CardDocument/CardDocument_NS.adoc[]
-****** xref:BackOffice-Cards:CardDocument/IFilesView_IN.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddAdditionalScanFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddAdditionalScanFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainFSFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainFSFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainScanFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainScanFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainRecognizedFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainRecognizedFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/CancelLockMainFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/CopyAdditionalFileToClipboard_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/CopyMainFileToClipboard_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/CopyMainFileToClipboardAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/GetSelectedAdditionalFiles_EN.adoc[]
-******* xref:BackOffice-Cards:CardDocument/GetSelectedMainFiles_EN.adoc[]
-******* xref:BackOffice-Cards:CardDocument/LockMainFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenAdditionalFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenAdditionalFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenMainFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenMainFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/RefreshFiles_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/RemoveAdditionalFiles_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/RemoveMainFiles_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/SaveAdditionalFileToFS_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/SaveMainFileToFS_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/SaveMainFileToFSAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/UnlockMainFile_MT.adoc[]
-****** xref:BackOffice-Cards:CardDocument/IFilesViewWithPreview_IN.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddFile_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddFileAsync_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainFSFile_1_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainFSFileAsync_1_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainScanFile_1_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/AddMainScanFileAsync_1_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenMainFile_1_MT.adoc[]
-******* xref:BackOffice-Cards:CardDocument/OpenMainFileAsync_1_MT.adoc[]
+***** xref:BackOffice-Cards:Cards_NS.adoc[]
+****** xref:BackOffice-Cards:CardDocument/CardDocument_NS.adoc[]
+******* xref:BackOffice-Cards:CardDocument/IFilesView_IN.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddAdditionalScanFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddAdditionalScanFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainFSFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainFSFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainScanFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainScanFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainRecognizedFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainRecognizedFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/CancelLockMainFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/CopyAdditionalFileToClipboard_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/CopyMainFileToClipboard_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/CopyMainFileToClipboardAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/GetSelectedAdditionalFiles_EN.adoc[]
+******** xref:BackOffice-Cards:CardDocument/GetSelectedMainFiles_EN.adoc[]
+******** xref:BackOffice-Cards:CardDocument/LockMainFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenAdditionalFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenAdditionalFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenMainFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenMainFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/RefreshFiles_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/RemoveAdditionalFiles_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/RemoveMainFiles_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/SaveAdditionalFileToFS_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/SaveMainFileToFS_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/SaveMainFileToFSAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/UnlockMainFile_MT.adoc[]
+******* xref:BackOffice-Cards:CardDocument/IFilesViewWithPreview_IN.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddFile_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddFileAsync_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainFSFile_1_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainFSFileAsync_1_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainScanFile_1_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/AddMainScanFileAsync_1_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenMainFile_1_MT.adoc[]
+******** xref:BackOffice-Cards:CardDocument/OpenMainFileAsync_1_MT.adoc[]
