--- a/modules/ROOT/partials/bo-digital-signature.adoc
+++ b/modules/ROOT/partials/bo-digital-signature.adoc
@@ -1,9 +1,9 @@
-**** xref:BackOffice-DigitalSignature:DigitalSignature_NS.adoc[]
-***** xref:BackOffice-DigitalSignature:CertificateInfo_CL.adoc[]
-****** xref:BackOffice-DigitalSignature:CertificateInfo_CT.adoc[]
-***** xref:BackOffice-DigitalSignature:SignatureInfo_CL.adoc[]
-****** xref:BackOffice-DigitalSignature:SignatureInfo_CT.adoc[]
-***** xref:BackOffice-DigitalSignature:TimestampInfo_CL.adoc[]
-****** xref:BackOffice-DigitalSignature:TimestampInfo_CT.adoc[]
-***** xref:BackOffice-DigitalSignature:TimestampType_EN.adoc[]
-***** xref:BackOffice-DigitalSignature:IComplexSignatureService_IN.adoc[]
+***** xref:BackOffice-DigitalSignature:DigitalSignature_NS.adoc[]
+****** xref:BackOffice-DigitalSignature:CertificateInfo_CL.adoc[]
+******* xref:BackOffice-DigitalSignature:CertificateInfo_CT.adoc[]
+****** xref:BackOffice-DigitalSignature:SignatureInfo_CL.adoc[]
+******* xref:BackOffice-DigitalSignature:SignatureInfo_CT.adoc[]
+****** xref:BackOffice-DigitalSignature:TimestampInfo_CL.adoc[]
+******* xref:BackOffice-DigitalSignature:TimestampInfo_CT.adoc[]
+****** xref:BackOffice-DigitalSignature:TimestampType_EN.adoc[]
+****** xref:BackOffice-DigitalSignature:IComplexSignatureService_IN.adoc[]
