--- a/modules/ROOT/partials/bo-om-BaseCard.adoc
+++ b/modules/ROOT/partials/bo-om-BaseCard.adoc
@@ -1,22 +1,22 @@
-***** xref:BackOffice-ObjectModel-BaseCard:BarcodePrintSettings_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BarcodePrintSettingsCollection_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.Barcode_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.CardType_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.ChangeDate_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.CreateDate_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.Description_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.Numbers_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.Processes_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.SystemInfo_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.GetSection_MT.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardNumber_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardProcess_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty_CL.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty.Fields_PR.adoc[]
-****** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty.Item_PR.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardPropertyField_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardSectionRow_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardSignaturePart_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BaseCard:BaseCardSystemInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BarcodePrintSettings_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BarcodePrintSettingsCollection_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.Barcode_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.CardType_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.ChangeDate_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.CreateDate_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.Description_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.Numbers_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.Processes_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.SystemInfo_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCard.GetSection_MT.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardNumber_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardProcess_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty_CL.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty.Fields_PR.adoc[]
+******* xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty.Item_PR.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardPropertyField_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardSectionRow_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardSignaturePart_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BaseCard:BaseCardSystemInfo_CL.adoc[]
