--- a/modules/ROOT/partials/bo-om-builtin.adoc
+++ b/modules/ROOT/partials/bo-om-builtin.adoc
@@ -1,3 +1,3 @@
-***** xref:BackOffice-ObjectModel-BuiltIn:BuiltInBranch_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BuiltIn:BuiltInOperation_CL.adoc[]
-***** xref:BackOffice-ObjectModel-BuiltIn:BuiltInState_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BuiltIn:BuiltInBranch_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BuiltIn:BuiltInOperation_CL.adoc[]
+****** xref:BackOffice-ObjectModel-BuiltIn:BuiltInState_CL.adoc[]
