--- a/modules/ROOT/partials/bo-om-layouts.adoc
+++ b/modules/ROOT/partials/bo-om-layouts.adoc
@@ -1,6 +1,6 @@
-***** xref:BackOffice-ObjectModel-Layouts:LayoutsProperty_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Layouts:LayoutsDesignTreeType_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Layouts:LayoutsLayoutAttributeVisibility_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Layouts:LayoutsPropertyItem_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Layouts:LayoutsPropertyType_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Layouts:LinksLinkType_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LayoutsProperty_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LayoutsDesignTreeType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LayoutsLayoutAttributeVisibility_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LayoutsPropertyItem_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LayoutsPropertyType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Layouts:LinksLinkType_CL.adoc[]
