--- a/modules/ROOT/partials/bo-om-partners.adoc
+++ b/modules/ROOT/partials/bo-om-partners.adoc
@@ -1,18 +1,18 @@
-***** xref:BackOffice-ObjectModel-Partners:PartnersAddresseAddressType_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:Partners_CL.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:Partners.Companies_PR.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:Partners.Groups_PR.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:Partners.OrgTypes_PR.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:Partners.Positions_PR.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersCompany_CL.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:PartnersCompany.Employees_PR.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:PartnersCompany.Manager_PR.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:PartnersCompany.OrgType_PR.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersCompanyType_EN.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersEmployee_CL.adoc[]
-****** xref:BackOffice-ObjectModel-Partners:PartnersEmployee.Unit_PR.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersGroup_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersGroupGroup_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersOrgType_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersPosition_CL.adoc[]
-***** xref:BackOffice-ObjectModel-Partners:PartnersPropertyShowType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersAddresseAddressType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:Partners_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:Partners.Companies_PR.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:Partners.Groups_PR.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:Partners.OrgTypes_PR.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:Partners.Positions_PR.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersCompany_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:PartnersCompany.Employees_PR.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:PartnersCompany.Manager_PR.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:PartnersCompany.OrgType_PR.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersCompanyType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersEmployee_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Partners:PartnersEmployee.Unit_PR.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersGroup_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersGroupGroup_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersOrgType_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersPosition_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Partners:PartnersPropertyShowType_EN.adoc[]
