--- a/modules/ROOT/partials/bo-om-services-baseuniversal.adoc
+++ b/modules/ROOT/partials/bo-om-services-baseuniversal.adoc
@@ -1,10 +1,10 @@
-****** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService_IN.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddItem_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewItem_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewItemType_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewViewField_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CanCopyItemType_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CanMoveItemType_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CopyItem_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CopyItemType_MT.adoc[]
-******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.DeleteItem_MT.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService_IN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddItem_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewItem_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewItemType_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.AddNewViewField_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CanCopyItemType_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CanMoveItemType_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CopyItem_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.CopyItemType_MT.adoc[]
+******** xref:BackOffice-ObjectModel-Services-IBaseUniversalService:IBaseUniversalService.DeleteItem_MT.adoc[]
