--- a/modules/ROOT/partials/bo-winforms.adoc
+++ b/modules/ROOT/partials/bo-winforms.adoc
@@ -1,39 +1,39 @@
-**** xref:BackOffice-WinForms:WinForms_NS.adoc[]
-***** xref:BackOffice-WinForms:Controls/Controls_NS.adoc[]
-****** xref:BackOffice-WinForms:Controls/ExportForm_CL.adoc[]
-****** xref:BackOffice-WinForms:Controls/ItemSelectionMode_EN.adoc[]
-****** xref:BackOffice-WinForms:Controls/NumeratorBox_CL.adoc[]
-******* xref:BackOffice-WinForms:Controls/NumeratorBox.Rule_PR.adoc[]
-****** xref:BackOffice-WinForms:Controls/TaskTreeViewColumn_EN.adoc[]
-****** xref:BackOffice-WinForms:Controls/TaskTreeViewOperation_EN.adoc[]
-***** xref:BackOffice-WinForms:Design/Design_NS.adoc[]
-****** xref:BackOffice-WinForms:Design/LayoutItems/LayoutItems_NS.adoc[]
-******* xref:BackOffice-WinForms:Design/LayoutItems/ILayoutPropertyItem_IN.adoc[]
-******* xref:BackOffice-WinForms:Design/LayoutItems/IReferencePropertyItem_IN.adoc[]
-******* xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem_IN.adoc[]
-******** xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem.OnLayoutLoad_MT.adoc[]
-******** xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem.OnLayoutReuse_MT.adoc[]
-******* xref:BackOffice-WinForms:Design/LayoutItems/ITableControl_IN.adoc[]
-****** xref:BackOffice-WinForms:Design/PropertyControls/PropertyControls_NS.adoc[]
-******* xref:BackOffice-WinForms:Design/PropertyControls/IPreviewFileControl_IN.adoc[]
-******* xref:BackOffice-WinForms:Design/PropertyControls/IPropertyControl_IN.adoc[]
-***** xref:BackOffice-WinForms:BaseCardControl_CL.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl_CT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.AvailableBranches_PR.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.BaseObject_PR.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.Caption_PR.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.ChangeState_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.Commit_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.HasChanges_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.ReloadLayout_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.Rollback_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.Save_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_1_MT.adoc[]
-****** xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_2_MT.adoc[]
-***** xref:BackOffice-WinForms:CardFrameForm_CL.adoc[]
-***** xref:BackOffice-WinForms:ScriptClassBase_CL.adoc[]
-***** xref:BackOffice-WinForms:ICardView_IN.adoc[]
-***** xref:BackOffice-WinForms:ICustomizableControl_IN.adoc[]
-****** xref:BackOffice-WinForms:ICustomizableControl.RibbonControl_PR.adoc[]
-****** xref:BackOffice-WinForms:ICustomizableControl.FindPropertyItem_MT.adoc[]
+***** xref:BackOffice-WinForms:WinForms_NS.adoc[]
+****** xref:BackOffice-WinForms:Controls/Controls_NS.adoc[]
+******* xref:BackOffice-WinForms:Controls/ExportForm_CL.adoc[]
+******* xref:BackOffice-WinForms:Controls/ItemSelectionMode_EN.adoc[]
+******* xref:BackOffice-WinForms:Controls/NumeratorBox_CL.adoc[]
+******** xref:BackOffice-WinForms:Controls/NumeratorBox.Rule_PR.adoc[]
+******* xref:BackOffice-WinForms:Controls/TaskTreeViewColumn_EN.adoc[]
+******* xref:BackOffice-WinForms:Controls/TaskTreeViewOperation_EN.adoc[]
+****** xref:BackOffice-WinForms:Design/Design_NS.adoc[]
+******* xref:BackOffice-WinForms:Design/LayoutItems/LayoutItems_NS.adoc[]
+******** xref:BackOffice-WinForms:Design/LayoutItems/ILayoutPropertyItem_IN.adoc[]
+******** xref:BackOffice-WinForms:Design/LayoutItems/IReferencePropertyItem_IN.adoc[]
+******** xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem_IN.adoc[]
+********* xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem.OnLayoutLoad_MT.adoc[]
+********* xref:BackOffice-WinForms:Design/LayoutItems/IReusableLayoutItem.OnLayoutReuse_MT.adoc[]
+******** xref:BackOffice-WinForms:Design/LayoutItems/ITableControl_IN.adoc[]
+******* xref:BackOffice-WinForms:Design/PropertyControls/PropertyControls_NS.adoc[]
+******** xref:BackOffice-WinForms:Design/PropertyControls/IPreviewFileControl_IN.adoc[]
+******** xref:BackOffice-WinForms:Design/PropertyControls/IPropertyControl_IN.adoc[]
+****** xref:BackOffice-WinForms:BaseCardControl_CL.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl_CT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.AvailableBranches_PR.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.BaseObject_PR.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.Caption_PR.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.ChangeState_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.Commit_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.HasChanges_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.ReloadLayout_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.Rollback_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.Save_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_1_MT.adoc[]
+******* xref:BackOffice-WinForms:BaseCardControl.ValidateProperties_2_MT.adoc[]
+****** xref:BackOffice-WinForms:CardFrameForm_CL.adoc[]
+****** xref:BackOffice-WinForms:ScriptClassBase_CL.adoc[]
+****** xref:BackOffice-WinForms:ICardView_IN.adoc[]
+****** xref:BackOffice-WinForms:ICustomizableControl_IN.adoc[]
+******* xref:BackOffice-WinForms:ICustomizableControl.RibbonControl_PR.adoc[]
+******* xref:BackOffice-WinForms:ICustomizableControl.FindPropertyItem_MT.adoc[]
