--- a/modules/ROOT/partials/pl-wpf.adoc
+++ b/modules/ROOT/partials/pl-wpf.adoc
@@ -1,3 +1,3 @@
-**** xref:Platform-Wpf:Wpf_NS.adoc[]
-***** xref:Platform-Wpf:NavExtension_CL.adoc[]
-****** xref:Platform-Wpf:NavExtension.SupportedTypes_PR.adoc[]
+***** xref:Platform-Wpf:Wpf_NS.adoc[]
+****** xref:Platform-Wpf:NavExtension_CL.adoc[]
+******* xref:Platform-Wpf:NavExtension.SupportedTypes_PR.adoc[]
