--- a/modules/ROOT/root.adoc
+++ b/modules/ROOT/root.adoc
@@ -8,8 +8,6 @@
 
 ** xref:begin.adoc[]
 ** xref:development.adoc[]
-+
---
 include::partial$cards.adoc[]
 include::partial$views.adoc[]
 include::partial$solutions.adoc[]
@@ -97,5 +95,4 @@ include::partial$pl-winforms.adoc[]
 include::partial$pl-wpf.adoc[]
 include::partial$platform.adoc[]
 include::partial$workflow-api.adoc[]
-include::partial$schemas.adoc
---
+include::partial$schemas.adoc[]
